[project]
name = "ksantt"
version = "0.1.0"
description = "KubeSAN Testing Tool"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "kubernetes",
    "openshift-python-wrapper",
    "pytest",
    "pytest-bdd"
]
[project.optional-dependencies]
dev = [
  "pre-commit"
]

[tool.pytest.ini_options]
log_file_level = "DEBUG"
log_file_date_format = "%Y-%m-%d-%H-%M-%S"
log_file_format = "%(asctime)s - %(filename)s - %(module)s - %(funcName)s - %(lineno)d - %(levelname)s - %(message)s"
filterwarnings = [
    "ignore::DeprecationWarning",
]

[tool.ruff]
# Exclude a variety of commonly ignored directories.
exclude = [
    ".git",
    ".mypy_cache",
    ".pytest_cache",
    ".ruff_cache",
    ".venv",
    ".vscode",
]

line-length = 120
indent-width = 4
output-format = "grouped"

[tool.ruff.lint]
select = [
    # pycodestyle
    "E",
    "W",
    # Pyflakes
    "F",
    # isort
    "I",
    # flake8-logging-format
    "G",
    # pylint Error
    "PLC",
    "PLE",
]
ignore = ["G004"]

# Allow fix for all enabled rules (when `--fix`) is provided.
fixable = ["ALL"]
unfixable = []

[tool.ruff.format]
# Like Black, use double quotes for strings.
quote-style = "double"

# Like Black, indent with spaces, rather than tabs.
indent-style = "space"

# Like Black, respect magic trailing commas.
skip-magic-trailing-comma = false

# Like Black, automatically detect the appropriate line ending.
line-ending = "auto"

[tool.mypy]
# Enforce type hints on function arguments (but not return types)
no_implicit_optional = true
show_error_codes = true
warn_unused_ignores = true
