[project]
name = "ksantt"
version = "2025.1"
description = "KubeSAN Testing Tool"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "behave",
    "behave-reportportal",
    "kubernetes",
    "openshift-client",
    "openshift-python-utilities",
    "openshift-python-wrapper",
    "PyYAML",
]
[project.optional-dependencies]
dev = [
    "pre-commit"
]

[tool.ruff]
exclude = [
    ".ruff_cache",
    ".venv",
]

line-length = 120
indent-width = 4
output-format = "grouped"

[tool.ruff.lint]
select = [
    # pycodestyle
    "E",
    "W",
    # Pyflakes
    "F",
    # isort
    "I",
    # flake8-logging-format
    "G",
    # pylint Error
    "PLC",
    "PLE",
]
ignore = ["G004"]

# Allow fix for all enabled rules (when `--fix`) is provided.
fixable = ["ALL"]
unfixable = []

[tool.ruff.format]
# Like Black, use double quotes for strings.
quote-style = "double"

# Like Black, indent with spaces, rather than tabs.
indent-style = "space"

# Like Black, respect magic trailing commas.
skip-magic-trailing-comma = false

# Like Black, automatically detect the appropriate line ending.
line-ending = "auto"
