[project]
name = "ksantt"
version = "0.1.0"
description = "KubeSAN Testing Tool"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "kubernetes",
    "openshift",
    "pytest-order",
    "pytest",
    "pytest-repeat",
    "pytest-timeout",
]

[tool.pytest.ini_options]
log_file_level = "DEBUG"
log_file_date_format = "%Y-%m-%d-%H-%M-%S"
log_file_format = "%(asctime)s - %(filename)s - %(module)s - %(funcName)s - %(lineno)d - %(levelname)s - %(message)s"